crates/urd-derive/tests/ui/tuple_struct_rejected.stderr
error: ExternObject can only be derived for structs with named fields
 --> tests/ui/tuple_struct_rejected.rs:4:8
  |
4 | struct TupleStruct(i32, String);
  |        ^^^^^^^^^^^
