crates/urd-derive/tests/ui/tuple_struct_rejected.rs
use urd::ExternObject;

#[derive(ExternObject)]
struct TupleStruct(i32, String);

fn main() {}
